# RiskLens

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: streamlit_app.py
docs/: assumptions.md  conclusions.md  mathematical_reference.md  project_overview.md  ticket_registry.md  workflow.md
docs/decisions/: data.md  models.md  ms_garch_unified.md
docs/tickets/: RL-001.md  RL-003.md  RL-004.md  RL-005.md  RL-008.md  (+16 more)
notebooks/: horizon_crossover.ipynb  main.ipynb  model_comparison.ipynb  model_deep_dive.ipynb  model_diagnosis.ipynb  regime_comparison.ipynb  risk_analysis_demo.ipynb  risk_analysis_walkthrough.ipynb  validation_backtesting.ipynb
presentation/: RiskLens_takeaways_slide.pptx
reports/: horizon_crossover_results.md  model_deep_dive_results.md  ms_garch_diagnosis_results.md  ms_garch_fix_results.md  ms_garch_unified_results.md  rl035_when_each_model_fails.md  seed_robustness_results.md
src/: config.py  utils.py
tests/: test_audit.py  test_backtesting.py  test_data_pipeline.py  test_data_storage.py  test_evt.py  test_loss_functions.py  test_monte_carlo.py  test_ms_garch.py  test_regime_gmm.py  test_regime_hmm.py  test_risk_metrics.py  test_vol_rvol.py  test_xgb_var.py
tickets/: RL-002.md  RL-003.md  RL-006.md  RL-007.md  RL-011.md  RL-012.md  RL-014.md  RL-015.md  RL-016.md  RL-017.md  RL-018.md  RL-019.md  RL-020.md  RL-021.md  RL-022.md  RL-024.md  RL-027.md  RL-029.md  RL-031.md  RL-033.md  RL-035.md  RL-039.md  RL-040.md  RL-041.md  RL-044.md  RL-046.md  registry.md
(+18 files in other folders)
