[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "risklens"
version = "0.1.0"
description = "Investor Risk Assistant"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
