[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "risklens"
version = "0.2.0"
description = "Investor Risk Assistant"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
